Phase 12: Initial Annotation Processor Setup & Criteria API